load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "yuv_camera",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
        ],
    ),
    outs = [
        "amlcam/amlogic-camera-yuv.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
