load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "camera",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
        ],
    ),
    outs = [
        "amlcam/amlcam.ko",
        "amlsens/amlsens.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
